--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "externalConsole": false,
-      "cwd": "/media/ephraim/la programmation/Cpp/Algorithms",
-      "program": "/media/ephraim/la programmation/Cpp/Algorithms/build/Debug/outDebug",
+      "externalConsole": true,
+      "cwd": "c:/Users/ephra/AppData/Roaming/Code/User",
+      "program": "c:/Users/ephra/AppData/Roaming/Code/User/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
