--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .vscode
 .vscode/settings.json
+.vscode/c_cpp_properties.json
+.vscode/settings.json
+.vscode/launch.json
+.vscode/c_cpp_properties.json
