--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-.vscode
-.vscode/settings.json
-.vscode/c_cpp_properties.json
-.vscode/settings.json
-.vscode/launch.json
-.vscode/c_cpp_properties.json
+.vscode/
+
